# core

./: Cargo.toml
src/: adapter.rs  backend.rs  buffer.rs  desc.rs  device.rs  item.rs  lib.rs  pipeline.rs  render.rs  shapes.rs  swapchain.rs
