[package]
name = "core"
version = "0.1.0"
authors = ["Tskken <35545683+Tskken@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["gfx-backend-vulkan"]
metal = ["gfx-backend-metal"]
gl = ["gfx-backend-gl"]
vulkan = ["gfx-backend-vulkan"]
unstable = []

[dependencies]
cgmath = "0.17"
rgb = "*" # remove later when reworking shape
image = "0.23"
log = "0.4"
hal = {version = "0.6", package = "gfx-hal"}
auxil = {version = "0.6", package = "gfx-auxil"}
winit = {version = "0.23", features = ["web-sys"]}
env_logger = "0.7"
glsl-to-spirv = "0.1.4"

[dependencies.gfx-backend-vulkan]
version = "0.6"
features = ["x11"]
optional = true

[target.'cfg(unix)'.dependencies.gfx-backend-gl]
version = "0.5"
optional = true

[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies.gfx-backend-metal]
version = "0.6"
optional = true
